--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-datepicker": "^3.2.2",
+    "react-datetime-picker": "^3.0.4",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-time-picker": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start && nodemon index.js",
