--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
+    "react-alert": "^7.0.2",
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.2.2",
     "react-datetime-picker": "^3.0.4",
