--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "redux-persist": "^6.0.0",
-    "react-time-picker": "^4.0.1"
+    "react-time-picker": "^4.0.1",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start && nodemon index.js",
