--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.2",
-    "emailjs-com": "^2.6.3",
+    "cors": "^2.8.5",
     "dateformat": "^3.0.3",
+    "emailjs-com": "^2.6.3",
+    "mongoose": "^5.10.12",
     "multiselect-react-dropdown": "^1.6.1",
     "react": "^16.13.1",
     "react-alert": "^7.0.2",
