--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "redux-persist": "^6.0.0"
   },
   "scripts": {
-    "start": "react-scripts start && nodemon index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "react-scripts start && node backend/server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "10.16.0"
   }
 }
