--- a/package.json
+++ b/package.json
@@ -1,59 +1,25 @@
 {
-  "name": "cleanbase",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.4.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "aws-sdk": "^2.768.0",
-    "axios": "^0.20.0",
-    "bcryptjs": "^2.4.3",
-    "bootstrap": "^4.5.2",
-    "cors": "^2.8.5",
-    "dateformat": "^3.0.3",
-    "emailjs-com": "^2.6.3",
-    "mongoose": "^5.10.12",
-    "multiselect-react-dropdown": "^1.6.1",
-    "react": "^16.13.1",
-    "react-alert": "^7.0.2",
-    "react-bootstrap": "^1.3.0",
-    "react-calendar": "^3.1.0",
-    "react-datepicker": "^3.3.0",
-    "react-datetime-picker": "^3.0.4",
-    "react-dom": "^16.13.1",
-    "react-multi-select-component": "^3.0.4",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "react-select": "^3.1.0",
-    "react-time-picker": "^4.0.1",
-    "redux-persist": "^6.0.0"
-  },
+  "name": "mernapp",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start": "react-scripts start && node backend/server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install && npm run build"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && npm run build",
+    "install-client": "cd client && npm install",
+    "heroku-postbuild": "npm run install-client && npm run build",
+    "start": "node server.js",
+    "client": "cd client && npm start",
+    "dev": "concurrently -n 'server,client' -c 'red,green'  \"nodemon server.js\" \"npm run client\""
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "engines": {
-    "node": "10.16.0"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "concurrently": "^5.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.9",
+    "morgan": "^1.9.1"
   }
 }
